[gd_scene load_steps=4 format=3 uid="uid://dlr5n5is4debn"]

[ext_resource type="Script" path="res://scripts/ui/clickable_icon.gd" id="1_bgg3l"]
[ext_resource type="Texture2D" uid="uid://bmxm20ch1fnua" path="res://assets/ui/background_tiles.png" id="2_6rdom"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gxx1h"]
bg_color = Color(0.156863, 0.156863, 0.180392, 0.27451)

[node name="ClickableIcon" type="PanelContainer"]
script = ExtResource("1_bgg3l")
background_tiles = ExtResource("2_6rdom")

[node name="HoverOverlay" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gxx1h")

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
